--- a/client/index.html
+++ b/client/index.html
@@ -37,20 +37,20 @@
   <main id="app">
     <div class="container-fluid">
       <div class="row my-3">
-        <div class="col-lg-5" id="auth-settings">
-          <div class="card p-2 skeleton-loader">
-            <div class="card-title p-2">
-              <div class="d-flex align-items-center">
-                <div class="skeleton-loader avatar"></div>
-                <div class="skeleton-loader text mx-2"></div>
-              </div>
-            </div>
-            <div class="card-body border-top">
-              <div class="skeleton-loader text block"></div>
-              <div class="skeleton-loader text block"></div>
-              <div class="skeleton-loader text block"></div>
-            </div>
-          </div>
+        <div class="col-12">
+          <h3>All Courses</h3>
+        </div>
+        <div class="col-12">
+          <div class="row" id="courses"></div>
+        </div>
+      </div>
+      
+      <div class="row border-top  border-secondary mt-4 pt-4">
+        <div class="col-12">
+          <h3>My Courses</h3>
+        </div>
+        <div class="col-12">
+          <div class="row" id="my-courses"></div>
         </div>
       </div>
     </div>
